load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "boost.system",
    hdrs = glob([
        "include/**/*.hpp",
        "include/**/*.h",
        "include/**/*.ipp",
    ]),
    includes = ["include"],
    deps = [
        "@boost.assert",
        "@boost.config",
        "@boost.throw_exception",
        "@boost.variant2",
        "@boost.winapi",
    ],
)
